fix: tech stack images wrap for mobile screens

--- a/src/sections/tech/tech.scss
+++ b/src/sections/tech/tech.scss
@@ -7,6 +7,9 @@
   .col {
     align-items: center;
     text-align: center;
+    .tech-stack {
+      display: flex;
+    }
   }
   h2 {
     font-size: 2.5rem;
@@ -32,9 +35,14 @@
       font-size: 2rem;
       margin: 0;
     }
-    img {
-      height: 20px;
-      margin: 0 10px;
+    .col {
+      .tech-stack {
+        flex-wrap: wrap;
+        justify-content: center;
+        img {
+          margin: 20px;
+        }
+      }
     }
   }
 }
